<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.groqdata</groupId>
	<artifactId>misp</artifactId>
	<version>3.8.8</version>

	<name>misp</name>
	<url>http://www.ruoyi.vip</url>
	<description>通用后台管理系统</description>

	<properties>
		<misp.version>3.8.8</misp.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>21</java.version>
        <build.plugins.plugin.version>3.11.0</build.plugins.plugin.version>
		<spring-framework.version>5.3.33</spring-framework.version>
		<spring-security.version>5.7.12</spring-security.version>
		<druid.version>1.2.23</druid.version>
		<bitwalker.version>1.21</bitwalker.version>
		<kaptcha.version>2.3.3</kaptcha.version>
		<pagehelper.boot.version>1.4.7</pagehelper.boot.version>
		<fastjson.version>2.0.43</fastjson.version>
		<oshi.version>6.6.1</oshi.version>
		<commons.io.version>2.13.0</commons.io.version>
		<poi.version>4.1.2</poi.version>
		<velocity.version>2.3</velocity.version>
		<jwt.version>0.9.1</jwt.version>
		<swagger.version>3.0.0</swagger.version>
		<knife4j.version>3.0.3</knife4j.version>
	</properties>

	<!-- 依赖声明 -->
	<dependencyManagement>
		<dependencies>

			<!-- SpringFramework的依赖配置-->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring-framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- SpringSecurity的依赖配置-->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-bom</artifactId>
				<version>${spring-security.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- SpringBoot的依赖配置-->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.5.15</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- 阿里数据库连接池 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- 解析客户端操作系统、浏览器等 -->
			<dependency>
				<groupId>eu.bitwalker</groupId>
				<artifactId>UserAgentUtils</artifactId>
				<version>${bitwalker.version}</version>
			</dependency>

			<!-- pagehelper 分页插件 -->
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper-spring-boot-starter</artifactId>
				<version>${pagehelper.boot.version}</version>
			</dependency>

			<!-- 获取系统信息 -->
			<dependency>
				<groupId>com.github.oshi</groupId>
				<artifactId>oshi-core</artifactId>
				<version>${oshi.version}</version>
			</dependency>

			<!-- Swagger3依赖 -->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-boot-starter</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<!--  集成knife4j实现swagger文档增强-->
			<dependency>
				<groupId>com.github.xiaoymin</groupId>
				<artifactId>knife4j-spring-boot-starter</artifactId>
				<version>${knife4j.version}</version>
			</dependency>


			<!-- io常用工具类 -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<!-- excel工具 -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- velocity代码生成使用模板 -->
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity-engine-core</artifactId>
				<version>${velocity.version}</version>
			</dependency>

			<!-- 阿里JSON解析器 -->
			<dependency>
				<groupId>com.alibaba.fastjson2</groupId>
				<artifactId>fastjson2</artifactId>
				<version>${fastjson.version}</version>
			</dependency>

			<!-- Token生成与解析-->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jwt.version}</version>
			</dependency>

			<!-- 验证码 -->
			<dependency>
				<groupId>pro.fessional</groupId>
				<artifactId>kaptcha</artifactId>
				<version>${kaptcha.version}</version>
			</dependency>

			<!-- 定时任务-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-quartz</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 代码生成-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-generator</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 核心模块-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-framework</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 系统模块-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-system</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 通用工具-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-common</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 服务购买方-->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-consumer</artifactId>
				<version>${misp.version}</version>
			</dependency>

			<!-- 服务提供方 -->
			<dependency>
				<groupId>com.groqdata</groupId>
				<artifactId>misp-provider</artifactId>
				<version>${misp.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<modules>
		<module>misp-admin</module>
		<module>misp-framework</module>
		<module>misp-system</module>
		<module>misp-quartz</module>
		<module>misp-generator</module>
		<module>misp-common</module>
		<module>misp-consumer</module>
		<module>misp-provider</module>
	</modules>
	<packaging>pom</packaging>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${build.plugins.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<!--此插件用于格式化代码，mvn spotless:check mvn spotless:apply -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.46.1</version>
				<configuration>
					<java>
						<eclipse>
							<file>spotless_formatter.xml</file>
						</eclipse>
						<!-- 移除未使用的导入语句 -->
						<removeUnusedImports />
					</java>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>https://maven.aliyun.com/repository/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>https://maven.aliyun.com/repository/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>